# rp27c512

./: .gitignore  LICENSE  README.md
.github/workflows/: macos.yml
firmware/: CMakeLists.txt  busmon.c  busmon.h  busmon.pio  microrl_user_config.h  readline.c  readline.h  romemu.c  romemu.h  romemu.pio  rp27c512.c  rp27c512_copy_to_ram.ld  section.h
firmware/microrl-remaster/src/microrl/: microrl.c
firmware/xmodem/: CMakeLists.txt
hardware/: rp27c512.kicad_pcb  rp27c512.kicad_prl  rp27c512.kicad_pro  rp27c512.kicad_sch
hardware/panel/: rp27c512-panel.kicad_pcb  rp27c512-panel.kicad_prl  rp27c512-panel.kicad_pro
hardware/panel/gerber/: elecrow.sh  rp27c512-panel-B_Cu.gbl  rp27c512-panel-B_Paste.gbp  rp27c512-panel-B_Silkscreen.gbo  rp27c512-panel-Edge_Cuts.gm1  rp27c512-panel-F_Paste.gtp  rp27c512-panel-F_Silkscreen.gto  rp27c512-panel-job.gbrjob
hardware/panel/gerber/elecrow/: rp27c512.GBS  rp27c512.GTL  rp27c512.GTS  rp27c512.TXT
